Ajouter la case à cocher d'attestation au formulaire d'édition de la fiche du chercheur aussi.
Demande #859

--- a/auf_savoirs_en_partage/templates/chercheurs/chercheur_form.html
+++ b/auf_savoirs_en_partage/templates/chercheurs/chercheur_form.html
@@ -112,3 +112,12 @@
     </fieldset>
     {% endfor %}
 </fieldset>
+<table>
+    <tr>
+        <td>{{ forms.chercheur.attestation }}</td>
+        <td>
+            {{ forms.chercheur.attestation.label_tag }}
+            {{ forms.chercheur.attestation.errors }}
+        </td>
+    </tr>
+</table>
