--- a/auf_savoirs_en_partage/templates/accounts/new_password.html
+++ b/auf_savoirs_en_partage/templates/accounts/new_password.html
@@ -3,7 +3,7 @@
 {% block contenu %}
 <h1>Demande de changement de mot de passe</h1>
 {% if message %}
-<span class="flash-message">{{message}}</span>
+<div id="flash-message">{{message}}</div>
 <p>Cliquez <a href="{% url chercheurs.views.chercheur_login %}">ici</a> pour accéder à votre <a href="{% url chercheurs.views.chercheur_login %}">espace chercheur.</a> </p>
 {% endif %}
 <form method="post">
