--- a/auf_savoirs_en_partage/templates/accounts/send_password.html
+++ b/auf_savoirs_en_partage/templates/accounts/send_password.html
@@ -3,7 +3,7 @@
 {% block contenu %}
 <h1>Demande de changement de mot de passe</h1>
 {% if form.is_valid %}
-<span class="flash-message">Un message a été envoyé à l'adresse électronique spécifiée.</span>
+<div id="flash-message">Un message a été envoyé à l'adresse électronique spécifiée.</div>
 {% else %}
 <form method="post">
     <fieldset>
