--- a/auf_savoirs_en_partage/templates/chercheurs/perso.html
+++ b/auf_savoirs_en_partage/templates/chercheurs/perso.html
@@ -3,7 +3,7 @@
 {% block contenu %}
 
 {% if modification %}
-    <span "flash-message">Votre fiche a bien été enregistrée.</span>
+    <div id="flash-message">Votre fiche a bien été enregistrée.</div>
 {% endif %}
     
 <ul class="actions">
