--- a/auf_savoirs_en_partage/templates/accounts/login.html
+++ b/auf_savoirs_en_partage/templates/accounts/login.html
@@ -6,7 +6,7 @@
 <h1>Connexion</h1>
 
 {% if form.errors %}
-<p class="flash-message">Login ou mot de passe invalide.</p>
+<p id="flash-message">Login ou mot de passe invalide.</p>
 {% endif %}
 <form method="post" action="{% url chercheurs.views.chercheur_login %}">
   <table>
