--- a/auf_savoirs_en_partage/media/css/global.css
+++ b/auf_savoirs_en_partage/media/css/global.css
@@ -102,6 +102,7 @@ fieldset { padding: 10px; margin: 0; position: relative;
            border-left: none; border-right: none; }
 fieldset fieldset { border: 1px solid #ccc; background: #fafafa; margin: 10px; padding: 15px; }
 legend { font-weight: bold; color: #000000; margin: 0; padding:0 0.5em; }
+legend em { font-weight: normal; font-style: normal; }
 form .help { font-size: 90%; margin: 0; }
 form ul.errorlist { color:red; margin:0; padding: 0; }
 form ul.errorlist li { list-style:none; }
