Changé le libellé du bouton de soumission du formulaire d'inscription.
Demande #873

--- a/auf_savoirs_en_partage/templates/chercheurs/inscription.html
+++ b/auf_savoirs_en_partage/templates/chercheurs/inscription.html
@@ -11,6 +11,6 @@
 
 <form method="post">
     {% include "chercheurs/chercheur_form.html" %}   
-    <input type="submit" name="Submit" value="Inscription" class="bouton" />
+    <input type="submit" name="Submit" value="Enregistrer l'inscription" class="bouton" />
 </form>
 {% endblock %}
