--- a/auf_savoirs_en_partage/templates/chercheurs/fiche.html
+++ b/auf_savoirs_en_partage/templates/chercheurs/fiche.html
@@ -1,6 +1,6 @@
 <div id="fiche_chercheur">
 
-    <div><a href="mailto:{{ chercheur.personne.courriel }}">{{ chercheur.personne.courriel }}</a></div>
+    <div><a href="mailto:{{ chercheur.courriel }}">{{ chercheur.courriel }}</a></div>
     <div>{{ chercheur.etablissement_display }}</div>
     <div><span class="label">Région: </span>{{ chercheur.region.nom }}</div>
 
