--- a/auf_savoirs_en_partage/templates/chercheurs/edit.html
+++ b/auf_savoirs_en_partage/templates/chercheurs/edit.html
@@ -6,7 +6,7 @@
 {% endblock %}
 
 {% block contenu %}
-<h1>{{chercheur.personne.prenom}} {{chercheur.personne.nom}}</h1>
+<h1>{{ chercheur.prenom }} {{ chercheur.nom }}</h1>
 <form method="post" action="">
     {% include "chercheurs/chercheur_form.html" %}    
     <input type="submit" value="Sauvegarder" />
