Réparé le tri des chercheurs par nom, établissement ou pays en conjugaison avec la recherche textuelle.

--- a/auf_savoirs_en_partage/templates/savoirs/evenement_ajout.html
+++ b/auf_savoirs_en_partage/templates/savoirs/evenement_ajout.html
@@ -20,7 +20,7 @@
 </style>
 
 <h1>Soumettre un évènement</h1>
-<form method="POST">
+<form method="POST" enctype="multipart/form-data">
     <table class="form">
         {% include "render_form.html" %}
         <tr><td></td><td><input type="submit" value="Ajouter" /></td></tr>
