Changé le libellé du bouton "Sauvegarder" en "Enregistrer".
Demande #873

--- a/auf_savoirs_en_partage/templates/chercheurs/edit.html
+++ b/auf_savoirs_en_partage/templates/chercheurs/edit.html
@@ -9,6 +9,6 @@
 <h1>{{ chercheur.prenom }} {{ chercheur.nom }}</h1>
 <form method="post" action="">
     {% include "chercheurs/chercheur_form.html" %}    
-    <input type="submit" value="Sauvegarder" />
+    <input type="submit" value="Enregistrer" />
 </form>
 {% endblock %}
