--- a/auf_savoirs_en_partage/templates/accounts/new_password.html
+++ b/auf_savoirs_en_partage/templates/accounts/new_password.html
@@ -4,7 +4,8 @@
 <h1>Demande de changement de mot de passe</h1>
 {% if message %}
 <div id="flash-message">{{message}}</div>
-<p>Cliquez <a href="{% url chercheurs.views.chercheur_login %}">ici</a> pour accéder à votre <a href="{% url chercheurs.views.chercheur_login %}">espace chercheur.</a> </p>
+<p>Cliquez <a href="{% url django.contrib.auth.views.login %}">ici</a> 
+pour accéder à votre <a href="{% url django.contrib.auth.views.login %}">espace chercheur.</a> </p>
 {% endif %}
 <form method="post">
     <fieldset>
