--- a/auf_savoirs_en_partage/templates/container_base.html
+++ b/auf_savoirs_en_partage/templates/container_base.html
@@ -66,7 +66,7 @@
                         {% if user.is_authenticated %}
                         <a href="{% url django.contrib.auth.views.logout %}">Déconnexion</a>
                         {% else %}
-                        <a href="{% url chercheurs.views.chercheur_login %}">Connexion</a>
+                        <a href="{% url django.contrib.auth.views.login %}">Connexion</a>
                         {% endif %}
                     </div>
                 </div>
