--- a/auf_savoirs_en_partage/templates/registration/login.html
+++ b/auf_savoirs_en_partage/templates/registration/login.html
@@ -1,21 +1,21 @@
 {% extends "container_base.html" %}
-{% load sep %}
 
 {% block contenu %}
 
 <h1>Connexion</h1>
 
 {% if form.errors %}
-<p id="flash-message">Login ou mot de passe invalide.</p>
+<p class="form-errors">Login ou mot de passe invalide.</p>
 {% endif %}
-<form method="post" action="{% url chercheurs.views.chercheur_login %}">
+
+<form method="post" action="{% url django.contrib.auth.views.login %}">
   <table>
     <tr>
-      <td>{{ form.username.label_tag }}</td>
+      <td>Adresse électronique</td>
       <td>{{ form.username }}</td>
     </tr>
     <tr>
-      <td>{{ form.password.label_tag }}</td>
+      <td>Mot de passe</td>
       <td>{{ form.password }}</td>
     </tr>
   </table>
