Utiliser les mécanismes de Django pour le login, le logout et les changements de mot de passe.

--- a/auf_savoirs_en_partage/media/css/global.css
+++ b/auf_savoirs_en_partage/media/css/global.css
@@ -166,6 +166,8 @@ ul.actions { font-size: 90%; float: right; text-align: right; list-style: none;
 * html .clearfix { height:1%; }
 .clearfix { display:block; }
 
+/* Cadre */
+
 .cadre { width: 60%; margin: 100px auto; padding: 20px; background: #f9f9f9; border: 1px solid #aaa }
-.souligne { border-bottom: 1px solid #DDD; }
+.cadre h1 { margin: -20px -20px 0 -20px; padding: 5px; background: #aaa; color: white; font-size: 120%; font-weight: bold; text-align: center; }
 
