--- a/auf_savoirs_en_partage/templates/chercheurs/password_reset_form.html
+++ b/auf_savoirs_en_partage/templates/chercheurs/password_reset_form.html
@@ -5,7 +5,10 @@
     <h1>Demande de changement de mot de passe</h1>
     <form method="post">
         <p>Veuillez entrer l'adresse électronique avec laquelle vous avez completé votre inscription.</p>
-        {{ form.email }}
+        <p>
+            {{ form.email }}
+            {% if form.email.errors %}{{ form.email.errors }}{% endif %}
+        </p>
         <input type="submit" name="Submit" value="Envoyer" class="bouton" />
     </form>
 </div>
