Ajouté une étoile après le champ "J'atteste..."
Demande #882

--- a/auf_savoirs_en_partage/templates/chercheurs/chercheur_form.html
+++ b/auf_savoirs_en_partage/templates/chercheurs/chercheur_form.html
@@ -117,7 +117,7 @@
     <tr>
         <td>{{ forms.chercheur.attestation }}</td>
         <td>
-            {{ forms.chercheur.attestation.label_tag }}
+            {{ forms.chercheur.attestation.label_tag }} <span style="color:red">*</span>
             {{ forms.chercheur.attestation.errors }}
         </td>
     </tr>
