Ajout de questions à la section "Activités en Francophonie"
Demande #874

--- a/auf_savoirs_en_partage/templates/chercheurs/chercheur_form.html
+++ b/auf_savoirs_en_partage/templates/chercheurs/chercheur_form.html
@@ -57,7 +57,8 @@
     <fieldset>
         <table>
             {% form_field forms.chercheur.membre_instance_auf %}
-            {% form_field forms.chercheur.membre_instance_auf_details %}
+            {% form_field forms.chercheur.membre_instance_auf_nom %}
+            {% form_field forms.chercheur.membre_instance_auf_fonction %}
             {% form_field forms.chercheur.membre_instance_auf_dates %}
         </table>
     </fieldset>
@@ -77,7 +78,8 @@
     <fieldset>
         <table>
             {% form_field forms.chercheur.membre_reseau_institutionnel %}
-            {% form_field forms.chercheur.membre_reseau_institutionnel_details %}
+            {% form_field forms.chercheur.membre_reseau_institutionnel_nom %}
+            {% form_field forms.chercheur.membre_reseau_institutionnel_fonction %}
             {% form_field forms.chercheur.membre_reseau_institutionnel_dates %}
         </table>
     </fieldset>
