--- a/auf_savoirs_en_partage/templates/chercheurs/fiche.html
+++ b/auf_savoirs_en_partage/templates/chercheurs/fiche.html
@@ -100,7 +100,11 @@
         {% if chercheur.membre_instance_auf %}
         <tr>
             <td class="label">Membre d'une instance de l'AUF</td>
-            <td>{{ chercheur.membre_instance_auf_details }}, {{ chercheur.membre_instance_auf_dates }}</td>
+            <td>
+                {{ chercheur.get_membre_instance_auf_nom_display }},
+                {{ chercheur.membre_instance_auf_fonction }}, 
+                {{ chercheur.membre_instance_auf_dates }}
+            </td>
         </tr>
         {% endif %}
         {% if chercheur.expert_oif %}
@@ -118,8 +122,11 @@
         {% if chercheur.membre_reseau_institutionnel %}
         <tr>
             <td class="label">Membre d'instances d'un réseau institutionnel de l'AUF</td>
-            <td>{{ chercheur.membre_reseau_institutionnel_details }},
-                {{ chercheur.membre_reseau_institutionnel_dates }}</td>
+            <td>
+                {{ chercheur.get_membre_reseau_institutionnel_nom_display }},
+                {{ chercheur.membre_reseau_institutionnel_fonction }},
+                {{ chercheur.membre_reseau_institutionnel_dates }}
+            </td>
         </tr>
         {% endif %}
     </table>
