Lors de la recherche, ne pas afficher "Aucun résultat" lorsqu'il y a des sites AUF

--- a/auf_savoirs_en_partage/templates/savoirs/recherche.html
+++ b/auf_savoirs_en_partage/templates/savoirs/recherche.html
@@ -73,7 +73,7 @@
     {% endfor %}
 {% endif %}
 
-{% if not ressources and not actualites and not evenements and not chercheurs and not sites %}
+{% if not ressources and not actualites and not evenements and not chercheurs and not sites and not sites_auf %}
     <h2>Aucun résultat</h2>
     <p><a href="{% url savoirs.views.index %}">Retour à la page d'accueil</a></p>
 {% endif %}
