Bug: certaines expertises étaient cachées dans certaines fiches de chercheurs.
Demande #1033

--- a/auf_savoirs_en_partage/templates/chercheurs/fiche.html
+++ b/auf_savoirs_en_partage/templates/chercheurs/fiche.html
@@ -132,7 +132,7 @@
     </table>
     {% endif %}
 
-    {% if chercheurs.expertises.count or chercheur.expertises_auf %}
+    {% if chercheur.expertises.count or chercheur.expertises_auf %}
     <h2>Expertises</h2>
     {% for expertise in chercheur.expertises.all %}
     <table>
