Nouvelle brique: Appels d'offres
Demande #830

--- a/auf_savoirs_en_partage/templates/savoirs/a-propos.html
+++ b/auf_savoirs_en_partage/templates/savoirs/a-propos.html
@@ -37,7 +37,7 @@ Le portail « Savoirs en partage » s'inscrit dans la continuité des différe
 Les sites retenus ici ont été créés en partenariat par l'AUF et des universités membres : cours en ligne, revues électroniques, fonds patrimoniaux, etc. constituent une source importante de ressources pédagogiques et scientifiques, à la disposition de tous. 
 </p>
 
-<h2><a href="{% url savoirs.views.actualite_index %}">... des actualités scientifiques</a></h2>
+<h2><a href="{% url actualites %}">... des actualités scientifiques</a></h2>
 
 <p>
 Les actualités scientifiques proposés sur différents sites de l'AUF sont reprises ici. 
