--- a/auf_savoirs_en_partage/templates/container_base.html
+++ b/auf_savoirs_en_partage/templates/container_base.html
@@ -55,7 +55,8 @@
                         <a href="{% url savoirs.views.index %}">Accueil</a> |
                         <a href="{% url chercheurs.views.index %}">Répertoire</a> |
                         <a href="{% url savoirs.views.ressource_index %}">Ressources</a> |
-                        <a href="{% url savoirs.views.actualite_index %}">Actualités</a> |
+                        <a href="{% url actualites %}">Actualités</a> |
+                        <a href="{% url appels %}">Appels d'offres</a> |
                         <a href="{% url savoirs.views.evenement_index %}">Agenda</a> |
                         <a href="{% url sitotheque.views.index %}">Sites</a>
                     </div>
