--- a/auf_savoirs_en_partage/templates/savoirs/actualite_resultat.html
+++ b/auf_savoirs_en_partage/templates/savoirs/actualite_resultat.html
@@ -3,11 +3,10 @@
 <div class="resultatRecherche">
   <div>{{ actualite.date|date:"d F Y" }}</div>
   <div class="titre">
-      <a href="{% url savoirs.views.actualite actualite.id %}">{{ actualite.titre|apply:excerpt }}</a>
+      <a href="{% url actualite actualite.id %}">{{ actualite.titre|apply:excerpt }}</a>
   </div>
-  <div>{{ actualite.texte|apply:excerpt }}</div>
+  <div>{{ actualite.texte|apply:excerpt|safe }}</div>
   {% if actualite.source %}
   <div><span class="label">Source:</span> {{ actualite.source.nom }}</div>
   {% endif %}
 </div>
-
