--- a/auf_savoirs_en_partage/templates/savoirs/index.html
+++ b/auf_savoirs_en_partage/templates/savoirs/index.html
@@ -26,11 +26,11 @@
     </div>
     <div id="actualites" class="box">
         <h1>
-            <a href="{% url savoirs.views.actualite_index %}">Actualités</a>
+            <a href="{% url actualites %}">Actualités</a>
             <a id="rss-actualites" href="/rss/actualites"><img src="/media/img/feed.png" /></a>
         </h1> 
         <ul class="actions-accueil">
-            <li><a href="{% url savoirs.views.actualite_index %}">Toutes les actualités</a></li>
+            <li><a href="{% url actualites %}">Toutes les actualités</a></li>
         </ul>
         
         <ul class="liste-de-l-accueil">
@@ -38,10 +38,33 @@
             <li>
                 <div>{{ actualite.date|date:"d F Y" }}</div>
                 <div class="titre">
-                    <a href="{% url savoirs.views.actualite actualite.id %}">{{ actualite.titre|truncatewords:20 }}</a>
+                    <a href="{% url actualite actualite.id %}">{{ actualite.titre|truncatewords:20 }}</a>
                 </div>
                 {% if actualite.source %}
                 <div>source: {{ actualite.source.nom }}</div>
+                {% endif %}
+            </li>
+        {% endfor %}
+        </ul>
+    </div>
+    <div id="appels" class="box">
+        <h1>
+            <a href="{% url appels %}">Appels d'offres scientifiques</a>
+            <a id="rss-actualites" href="/rss/appels"><img src="/media/img/feed.png" /></a>
+        </h1> 
+        <ul class="actions-accueil">
+            <li><a href="{% url appels %}">Touts les appels d'offres</a></li>
+        </ul>
+        
+        <ul class="liste-de-l-accueil">
+        {% for appel in appels %}
+            <li>
+                <div>{{ appel.date|date:"d F Y" }}</div>
+                <div class="titre">
+                    <a href="{% url actualite appel.id %}">{{ appel.titre|truncatewords:20 }}</a>
+                </div>
+                {% if appel.source %}
+                <div>source: {{ appel.source.nom }}</div>
                 {% endif %}
             </li>
         {% endfor %}
