--- a/auf_savoirs_en_partage/media/css/global.css
+++ b/auf_savoirs_en_partage/media/css/global.css
@@ -68,7 +68,8 @@ body { padding: 0; margin: 0; font-size: 9pt; font-family: Verdana, Arial, sans-
                        font-size: 90%; padding-bottom: 8px; }
 #regions_disciplines div { background: url(../img/col-droite-background.png) repeat-x top left; 
                            padding: 10px; }
-#regions_disciplines h1 { font-weight: normal; font-size: 180%; letter-spacing: -1px; }
+#regions_disciplines h1 { font-weight: normal; font-size: 100%; margin-top: 2em; text-transform: lowercase; letter-spacing: 0 }
+#regions_disciplines h1 em { font-size: 180%; letter-spacing: -1px; font-style: normal; display: block; text-transform: capitalize; }
 #regions_disciplines ul { margin: 0; padding: 0; list-style: none; }
 #regions_disciplines li { margin: 0; padding: 0; }
 #regions_disciplines a { display: block; margin-left: 5px; padding: 1px 5px; text-decoration: none; color: black; }
