Changé l'intitulé "Sites AUF" pour "Sites AUF (recherche Google)
Demande #847

--- a/auf_savoirs_en_partage/templates/savoirs/recherche.html
+++ b/auf_savoirs_en_partage/templates/savoirs/recherche.html
@@ -74,7 +74,7 @@
 {% endif %}
 
 {% if sites_auf %}
-    <h2>Sites AUF</h2>
+    <h2 title="Rechercher sur l'ensemble des sites présents dans la sitothèque">Sites AUF (recherche Google)</h2>
     <div class="sous-titre">
         <a class="action" href="{% url savoirs.views.sites_auf %}?q={{ q|urlencode }}"
             >Voir tous les sites AUF correspondant à cette recherche</a>
