--- a/auf_savoirs_en_partage/templates/savoirs/sites_auf.html
+++ b/auf_savoirs_en_partage/templates/savoirs/sites_auf.html
@@ -8,7 +8,7 @@
     });
 </script>
 
-<h1>Sites &#8212; Sites AUF</h1>
+<h1 title="Rechercher sur l'ensemble des sites présents dans la sitothèque">Sites AUF (recherche Google)</h1>
 <form method="get" action="">
     <p style="margin-top: 10px;"><input type="text" size="40" name="q" value="{{ google_q|default:""}}" /><input type="submit" name="" value="Chercher" /></p>
 </form>
