--- a/auf_savoirs_en_partage/templates/sites/actions.html
+++ b/auf_savoirs_en_partage/templates/sites/actions.html
@@ -1,1 +1,3 @@
-<li><a href="{% url savoirs.views.sites_auf %}">Sites AUF</a></li>
+<li><a href="{% url savoirs.views.sites_auf %}" 
+    title="Rechercher sur l'ensemble des sites présents dans la sitothèque"
+    >Sites AUF (recherche Google)</a></li>
