Ajout du mode d'emploi
Demandes #621, 1034

--- a/auf_savoirs_en_partage/templates/chercheurs/index.html
+++ b/auf_savoirs_en_partage/templates/chercheurs/index.html
@@ -7,6 +7,7 @@
 {% autopaginate chercheurs 20 %}
 
 <ul class="actions">
+    <li><a href="{% url aide %}#repertoire">Aide</a></li>
     {% include "chercheurs/actions.html" %}
 </ul>
 
