--- a/auf_savoirs_en_partage/templates/savoirs/a-propos.html
+++ b/auf_savoirs_en_partage/templates/savoirs/a-propos.html
@@ -42,4 +42,12 @@ Les sites retenus ici ont été créés en partenariat par l'AUF et des universi
 <p>
 Les actualités scientifiques proposés sur différents sites de l'AUF sont reprises ici. 
 </p>
+
+<p>Toutes ces rubriques sont accessibles <strong>par une double entrée</strong>, 
+par région ou par discipline, en fonction de la situation géographique ou des
+centres d'intérêt des utilisateurs. Le contenu peut ainsi être configuré avec
+précision selon les besoins des chercheurs, des directions régionales ou des
+interlocuteurs sur le terrain sans qu'aucune priorité géographique ou
+thématique ne soit imposée.</p>
+
 {% endblock %}
