--- a/auf_savoirs_en_partage/templates/savoirs/ressource_index.html
+++ b/auf_savoirs_en_partage/templates/savoirs/ressource_index.html
@@ -5,6 +5,10 @@
 {% block contenu %}
 {% autopaginate ressources 15 %}
 
+<ul class="actions">
+    <li><a href="{% url aide %}#ressources">Aide</a></li>
+</ul>
+
 <h1>Ressources</h1>
 
 <div class="texte">
