"Figures de l'État" s'appelle maintenant "Nouvelles figures de l'état"

--- a/auf_savoirs_en_partage/templates/chercheurs/conversion.html
+++ b/auf_savoirs_en_partage/templates/chercheurs/conversion.html
@@ -38,7 +38,7 @@ associés automatiquement aux nouveaux domaines de recherche.
     <li>réseau de chercheurs "Genre, droits et citoyenneté"</li>
 </ul>
 
-<h3>Domaine de recherche "Figures de l'État"</h3>
+<h3>Domaine de recherche "Nouvelles figures de l'État"</h3>
 <ul>
     <li>réseau de chercheurs "Droits fondamentaux"</li>
     <li>réseau de chercheurs "Droit de la santé"</li>
