Retiré la mention "version bêta"
Demande #1030

--- a/auf_savoirs_en_partage/templates/container_base.html
+++ b/auf_savoirs_en_partage/templates/container_base.html
@@ -78,7 +78,7 @@
                     <a id="logo" href="http://www.auf.org"
                         ><img src="{{ MEDIA_URL}}img/logo-agence-universitaire-de-la-francophonie.gif"
                               alt="Agence universitaire de la Francophonie" /></a>
-                    <h1>Savoirs en partage <em>version bêta</em></h1>
+                    <h1>Savoirs en partage</h1>
                     Le portail des ressources scientifiques<br />et pédagogiques de l'AUF
                     <form action="{% sep_url savoirs.views.recherche %}" method="get">
                         <label for="q">Recherche <em>dans toutes les rubriques</em></label>
