Afficher "Mme" ou "M." sur la fiche des chercheurs
Demande #1064

--- a/auf_savoirs_en_partage/templates/chercheurs/fiche.html
+++ b/auf_savoirs_en_partage/templates/chercheurs/fiche.html
@@ -1,7 +1,9 @@
+<h1>{{ chercheur.civilite }} {{ chercheur.prenom }} {{ chercheur.nom|upper }}</h1>
+
 <div id="fiche_chercheur">
 
-    <div><a href="mailto:{{ chercheur.courriel }}">{{ chercheur.courriel }}</a></div>
     <div>{{ chercheur.etablissement_display }}</div>
+    <div><a href="mailto:{{ chercheur.courriel }}">{{ chercheur.courriel }}</a></div>
     <div><span class="label">Région: </span>{{ chercheur.region.nom }}</div>
 
     <h2>Informations académiques</h2>
