--- a/auf_savoirs_en_partage/templates/chercheurs/index.html
+++ b/auf_savoirs_en_partage/templates/chercheurs/index.html
@@ -29,7 +29,7 @@ l'AUF s'appuie sur la mise en œuvre de projets inter-universitaires
 régionaux ou internationaux. Les <i>réseaux de chercheurs</i> ne sont plus
 le critère d'organisation du répertoire (consulter la 
 <a href="{% url chercheurs.views.conversion %}">table de passage</a>). Les
-chercheurs précisent leur <a href="{% url chercheurs.views.conversion %}">domaine de recherche</a>,
+chercheurs précisent leur <a href="{% url domaines-de-recherche %}">domaine de recherche</a>,
 discipline, thème(s) et groupe(s) de recherche, et ajoutent des mots-clés
 pour affiner leur profil scientifique.
 </p>
