Changement de texte dans la table de passage.

--- a/auf_savoirs_en_partage/templates/chercheurs/conversion.html
+++ b/auf_savoirs_en_partage/templates/chercheurs/conversion.html
@@ -4,8 +4,9 @@
 <h1>Répertoire des chercheurs - conversion</h1>
 
 <p>
-Pour chaque <b>domaine de recherche</b>, la liste des anciens <b>réseaux de
-chercheurs</b> associés. Les chercheurs de ces anciens réseaux ont été
+Les anciens <b>réseaux de chercheurs</b> ont été associés aux 
+<a href="{% url domaines-de-recherche %}">domaines de recherche</a> suivants.
+Les chercheurs de ces anciens réseaux ont été
 associés automatiquement aux nouveaux domaines de recherche.
 </p>
 
