Ajouté un bouton d'aide à la sitothèque.

--- a/auf_savoirs_en_partage/templates/sites/index.html
+++ b/auf_savoirs_en_partage/templates/sites/index.html
@@ -5,6 +5,7 @@
 {% autopaginate sites 10 %}
 
 <ul class="actions">
+    <li><a href="{% url aide %}#sitotheque">Aide</a></li>
     {% include "sites/actions.html" %}
 </ul>
 <h1>Sites &#8212; Sitothèque</h1>
