Ne pas afficher le titre "Publications" lorsqu'il n'y a pas de publications

--- a/auf_savoirs_en_partage/templates/chercheurs/fiche.html
+++ b/auf_savoirs_en_partage/templates/chercheurs/fiche.html
@@ -167,7 +167,7 @@
     {% endif %}
     {% endif %}
 
-    {% if chercheur.publications %}
+    {% if chercheur.publications.count %}
     <h2>Publications</h2>
     <ul class="publications">
         {% for publication in chercheur.publications.all %}
