Corrigé une coquille

--- a/auf_savoirs_en_partage/templates/savoirs/index.html
+++ b/auf_savoirs_en_partage/templates/savoirs/index.html
@@ -53,7 +53,7 @@
             <a id="rss-actualites" href="/rss/appels"><img src="/media/img/feed.png" /></a>
         </h1> 
         <ul class="actions-accueil">
-            <li><a href="{% url appels %}">Touts les appels d'offres</a></li>
+            <li><a href="{% url appels %}">Tous les appels d'offres</a></li>
         </ul>
         
         <ul class="liste-de-l-accueil">
