Ajout de l'aide pour les appels d'offres
Demande #1034

--- a/auf_savoirs_en_partage/templates/savoirs/aide.html
+++ b/auf_savoirs_en_partage/templates/savoirs/aide.html
@@ -287,13 +287,16 @@ la notice.</p>
 guillemets. Les caractères accentués et les marques du pluriel sont ignorés
 lors de la recherche.</p> 
 
-<h2 id="actualites"><a href="{% url actualites %}">Actualités</a></h2> 
+<h2 id="actualites">
+    <a href="{% url actualites %}">Actualités</a> / 
+    <a href="{% url appels %}">Appels d'offres</a>
+</h2> 
 
-<p>La rubrique actualités vous permet de retrouver les informations
-scientifiques sélectionnées sur nos sites institutionnels et nos sites
-régionaux.</p> 
+<p>Les rubriques "actualités" et "appels d'offres" vous permettent de retrouver
+les informations scientifiques sélectionnées sur nos sites institutionnels et
+nos sites régionaux.</p> 
 
-<p>La recherche dans les actualités peut se faire en mode simple (rechercher
+<p>La recherche dans ces deux rubriques peut se faire en mode simple (rechercher
 dans tous les champs) ou plus complexe, en sélectionnant les actualités selon
 leur dates de parution. On retrouve, comme sur toutes les rubriques du portail,
 la possibilité d'un tri par région et/ou discipline. Il est bien entendu
