Case "Je ne souhaite pas être sollicité par l'AUF pour des missions d'expertises"
Demande #1126

--- a/auf_savoirs_en_partage/templates/chercheurs/chercheur_form.html
+++ b/auf_savoirs_en_partage/templates/chercheurs/chercheur_form.html
@@ -122,7 +122,10 @@
     </fieldset>
     {% endfor %}
     <table>
-        {% form_field forms.chercheur.expertises_auf %}
+        <tr>
+            <th>{{ forms.chercheur.pas_de_sollicitation_expertises.label }}</th>
+            <td>{{ forms.chercheur.pas_de_sollicitation_expertises }}</td>
+        </tr>
     </table>
 </fieldset>
 
