Affiche le courriel des chercheurs en remplaçant '@' par ' (à) '
Demande #1119

--- a/auf_savoirs_en_partage/templates/chercheurs/fiche.html
+++ b/auf_savoirs_en_partage/templates/chercheurs/fiche.html
@@ -3,7 +3,7 @@
 <div id="fiche_chercheur">
 
     <div>{{ chercheur.etablissement_display }}</div>
-    <div><a href="mailto:{{ chercheur.courriel }}">{{ chercheur.courriel }}</a></div>
+    <div>{{ chercheur.courriel_display }}</div>
     <div><span class="label">Région: </span>{{ chercheur.region.nom }}</div>
 
     <h2>Informations académiques</h2>
