Correction de la recherche d'évènements par région
Demande #1123

--- a/auf_savoirs_en_partage/templates/savoirs/evenement.html
+++ b/auf_savoirs_en_partage/templates/savoirs/evenement.html
@@ -42,7 +42,7 @@
     {% endif %}
     {% if evenement.prenom %}
     <td>
-        {{ evenement.prenom }} {{ evenement.nom }} &lt;{{ evenement.courriel }}&gt;
+        {{ evenement.prenom }} {{ evenement.nom }} &lt;{{ evenement.courriel_display }}&gt;
     </td>
     {% endif %}
 </tr>
