--- a/auf_savoirs_en_partage/templates/savoirs/evenement_moderation.html
+++ b/auf_savoirs_en_partage/templates/savoirs/evenement_moderation.html
@@ -16,7 +16,7 @@
                 <li>Type: {{ e.type }}</li>
                 <li>Debut: {{ e.debut }}</li>
                 <li>Fin: {{ e.fin }}</li>
-                <li>Lieu: {{ e.lieu }}</li>
+                <li>Lieu: {{ e.adresse }} {{ e.ville }} {{ e.pays.nom }}</li>
                 <li>Description: {{ e.description }}</li>
                 <li>Contact: {{ e.contact }}</li>
                 <li>Url: {{ e.url }}</li>
