--- a/auf_savoirs_en_partage/templates/savoirs/rss_evenement_description.html
+++ b/auf_savoirs_en_partage/templates/savoirs/rss_evenement_description.html
@@ -1,4 +1,4 @@
 <p>quoi ? : {{ obj.description }}</p>
-<p>où ? : {{ obj.lieu }}</p>
+<p>où ? : {{ obj.adresse }}, {{ obj.ville }}, {{ obj.pays.nom }}</p>
 <p>quand ? : {{ obj.debut|date:"d F Y H:m" }}</p>
 <p>durée ? : {{ obj.duration_display }}</p>
